# qmake2cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qm2cm.kdev4
